--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="lib/style.css">
-  <h1>Реестр авто Боевой Классики МСК и МО</h1>
+  <h1>Реестр БРТС/БК/прочих авто МСК и МО</h1>
   <h2>(cервисное меню)</h2>
 
 </head>
